# nanostate

./: .gitignore  README.md  attention.py  benchmark.py  compare.py  data.py  engine.py  eval.py  generate.py  infinite_context.py  lefthook.yml  metal_kernels.py  plot.py  program.md  progress.py  pyproject.toml  results.tsv  ssd.py  train.py  visualize.py
.claude/skills/analyze-results/: SKILL.md
.claude/skills/benchmark-comparison/: SKILL.md
.claude/skills/read-arxiv-paper/: SKILL.md
.claude/skills/read-github-code/: SKILL.md
.github/workflows/: lint.yml  train.yml
knowledge/: analysis_mar10.md  analysis_mar11.md  analysis_mar12.md  analysis_mar13-3.md  analysis_mar13.md  design_ssd_implementation.md  mlx_optimization_research.md  reference_mamba_impl.md  reference_s4_impl.md  summary_hippo_initialization.md  summary_mamba2_ssd.md  summary_mamba_selective_scan.md  summary_s4_structured_state_spaces.md
reports/: index.html  results.json
reports/runs/: mar10.md  mar11.md
runs/: speedrun.sh
